--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,22 @@
     transform: rotate(360deg);
   }
 }
+
+.rating-container {
+  display: flex;
+  gap: 1px;
+}
+
+.rate {
+  border: 1px solid black;
+  height: 10px;
+  width: 10px;
+}
+
+.black {
+  background-color: black;
+}
+
+.white {
+  background-color: white;
+}
