--- a/src/css/Products.css
+++ b/src/css/Products.css
@@ -1,24 +1,24 @@
 .categoriesContainer {
-    display: flex;
-    flex-direction: column;
-    width: 300px;
-    background-color: rgb(179, 178, 178);
-    padding: 20px 0 20px;
-    margin-top: 20px;
+  background-color: rgb(179, 178, 178);
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+  padding: 20px 0;
+  width: 300px;
 }
 
 .mainContainer header {
+  align-items: center;
+  background-color: black;
   display: flex;
   justify-content: space-between;
   padding: 40px;
-  background-color: black;
-  align-items: center;
 }
 
 .cartPng {
-    width: 50px;
+  width: 50px;
 }
 
 .blackFridaypng {
-    width: 150px;
+  width: 150px;
 }
