--- a/src/css/Products.css
+++ b/src/css/Products.css
@@ -1,5 +1,5 @@
 .categoriesContainer {
-  background-color: rgb(179, 178, 178);
+  background-color: rgba(179, 178, 178, 0.735);
   display: flex;
   flex-direction: column;
   margin-top: 20px;
