--- a/src/css/Products.css
+++ b/src/css/Products.css
@@ -2,16 +2,16 @@
   background-color: rgba(179, 178, 178, 0.735);
   display: flex;
   flex-direction: column;
-  margin-top: 20px;
+  height: 1300px;
   padding: 20px 0;
   width: 300px;
 }
 
-.mainContainer header {
+.main header {
   align-items: center;
   background-color: black;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   padding: 40px;
 }
 
@@ -21,4 +21,30 @@
 
 .blackFridaypng {
   width: 150px;
+}
+
+.mainContainer {
+  display: flex;
+
+}
+
+.productsResults {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 50px;
+
+
+}
+
+.product {
+  border: 2px solid black;
+  height: 300px;
+  padding: 20px;
+  text-align: center;
+  width: 250px;
+}
+
+.categories {
+  width: 500px;
 }
