--- a/src/css/Products.css
+++ b/src/css/Products.css
@@ -34,12 +34,14 @@
   justify-content: center;
   margin-top: 50px;
 
-
 }
 
 .product {
-  border: 2px solid black;
-  height: 300px;
+  background-color: rgba(0, 255, 255, 0.474);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 10px;
   padding: 20px;
   text-align: center;
   width: 250px;
@@ -47,4 +49,27 @@
 
 .categories {
   width: 500px;
+}
+
+.product img {
+  width: 100px;
+}
+
+.product .price {
+  background-color: black;
+  border-radius: 20px;
+  color: white;
+  margin: 10px 0;
+}
+
+.tapSomething {
+  margin-left: 200px;
+}
+
+.productNotFound {
+  margin-left: 330px;
+}
+
+.linkPrice {
+  text-decoration: none;
 }
