primeiros estilos de  Details finalizados

--- a/src/css/Details.css
+++ b/src/css/Details.css
@@ -80,3 +80,11 @@
   word-wrap: break-word;
 
 }
+
+.detailsForm form h2 {
+  align-self: center;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+
+}
